# safeticket_mailer

./: .gitignore  README.md  config.example.py  flake.nix  main.py  package.nix  pyproject.toml  requirements.txt
lib/: misc.py
lib/invoice/: __init__.py  template.html
lib/invoice/twemoji/: README.md  twemoji.js
lib/safeticket-api_never_used/: __init__.py
lib/safeticket_wrapper/: __init__.py
nixosModule/: config.nix  default.nix  options.nix
src/: main.py
src/lib/: misc.py
src/lib/safeticket_wrapper/: __init__.py
src/safeticket_mailer/: __init__.py
src/safeticket_mailer/lib/: misc.py
src/safeticket_mailer/lib/config/: __init__.py  config_example.py
src/safeticket_mailer/lib/invoice/: __init__.py  template.html
src/safeticket_mailer/lib/safeticket_wrapper/: __init__.py
systemd.service/: safeticket-mailer.service  safeticket-mailer.timer
